--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>google-http-client-gson</artifactId>
             <version>1.18.0-rc</version>
         </dependency>
-
+        
         <!-- Logging stuffs -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -63,6 +63,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
